07_test_hostname/01_test_hostname_with_ingress_on_digitalocean/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
